--- a/src/main/resources/lang/message_vi.properties
+++ b/src/main/resources/lang/message_vi.properties
@@ -49,3 +49,6 @@ delete_category_success=Xóa danh mục thành công
 create_product_success=Thêm mới sản phẩm thành công
 update_product_success=Thay đổi sản phẩm thành công
 delete_product_success=Xóa sản phẩm thành công
+create_qtv_success=Thêm mới quản trị viên thành công
+update_qtv_success=Thay đổi quản trị viên thành công
+delete_qtv_success=Xóa quản trị viên thành công
